# toolcli

./: .gitignore  README.md  RETEST_ANALYSIS.md  TEST_RESULTS.md  pyproject.toml  run_tests.py  test_results.json
openspec/: config.yaml
openspec/flows/: agent-task-execution.yaml  complete-openspec-workflow.yaml  heartbeat-loop.yaml
openspec/specs/: github-operations.yaml  ollama-reasoning.yaml  openspec-workflow.yaml
tests/: __init__.py
toolcli/: __init__.py  config.py
toolcli/agent/: __init__.py  core.py  degraded_mode.py
toolcli/cli/: __init__.py  main.py
toolcli/heartbeat/: __init__.py  core.py
toolcli/tools/: __init__.py  github.py  ollama.py  opencode.py
toolcli/utils/: circuit_breaker.py  error_context.py  logging.py  metrics.py  resilience.py
