[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolcli"
version = "0.1.0"
description = "CLI agent tool with OpenSpec workflow and Ollama local models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["cli", "agent", "openspec", "ollama", "opencode"]
authors = [
    { name = "toolcli", email = "toolcli@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
toolcli = "toolcli.cli.main:app"

[project.urls]
Homepage = "https://github.com/trieuvo-web/toolcli"
Repository = "https://github.com/trieuvo-web/toolcli"
Issues = "https://github.com/trieuvo-web/toolcli/issues"

[tool.hatch.build.targets.wheel]
packages = ["toolcli"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
